homepage wrap fix, login setup, badges

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,8 +22,6 @@ $malber: #351f39;
 $darkslategray: #365660;
 $indianred: #C46168;
 
-
-
 $ink: #193446;
 $global_button: #3f51b5;
 $background: #{linear-gradient(to left, rgb(255, 239, 186), rgb(255, 255, 255))};
@@ -73,9 +71,7 @@ justify-content: center;
   display: flex;
 }
 
-html {
-  margin-bottom: 80px;
-}
+
 
 
 body {
